@@ -337,4 +337,16 @@ public class EqualityExtractorTest extends CrateUnitTest {
         List<List<Symbol>> matches = analyzeExactX(query);
         assertThat(matches, nullValue());
     }
+
+    @Test
+    public void testNoPKExtractionOnNotIn() {
+        List<List<Symbol>> matches = analyzeExactX(query("x not in (1, 2, 3)"));
+        assertThat(matches, nullValue());
+    }
+
+    @Test
+    public void testNoPKExtractionWhenColumnsOnBothSidesOfEqual() {
+        List<List<Symbol>> matches = analyzeExactX(query("x = abs(x)"));
+        assertThat(matches, nullValue());
+    }
 }
